--- a/docker/kong-fruit-salad/Dockerfile
+++ b/docker/kong-fruit-salad/Dockerfile
@@ -1,3 +1,4 @@
 FROM kong:3.6
 
-# Watch this space.
+COPY epfl-rewrite-hostnames /usr/local/share/lua/5.1/kong/plugins/epfl-rewrite-hostnames/
+COPY epfl-hijack-tequila /usr/local/share/lua/5.1/kong/plugins/epfl-hijack-tequila/
