--- a/ansible/roles/wordpress-namespace/tasks/secrets.yml
+++ b/ansible/roles/wordpress-namespace/tasks/secrets.yml
@@ -63,6 +63,20 @@
         keyId: "{{ s3_backup_credentials.keyId }}"
         accessSecret: "{{ s3_backup_credentials.accessSecret }}"
 
+- name: MariaDB operator restore (ro) credentials
+  kubernetes.core.k8s:
+    state: present
+    definition:
+      apiVersion: v1
+      kind: Secret
+      metadata:
+        name: s3-prod-ro-credentials
+        namespace: "{{ inventory_namespace }}"
+      type: Opaque
+      stringData:
+        keyId: "{{ s3_ro_prod_credentials.keyId | eyaml(eyaml_keys) }}"
+        accessSecret: "{{ s3_ro_prod_credentials.accessSecret | eyaml(eyaml_keys) }}"
+
 - name: Check if WordPress authentication secret exists
   kubernetes.core.k8s_info:
     api_version: v1
