--- a/ansible/roles/wordpress-namespace/vars/nginx-vars.yml
+++ b/ansible/roles/wordpress-namespace/vars/nginx-vars.yml
@@ -1,6 +1,6 @@
-wp-nginx-flavors-prod:
+wp_nginx_flavors_prod:
   - wp-nginx
-wp-nginx-flavors-test:
+wp_nginx_flavors_test:
   - wp-nginx-apple
   - wp-nginx-grapes
   - wp-nginx-kiwi
@@ -8,4 +8,4 @@ wp-nginx-flavors-test:
   - wp-nginx-orange
   - wp-nginx-alpha
   - wp-nginx-rc
-wp-nginx-flavors: "{{ wp-nginx-flavors-prod if inventory_deployment_stage == 'production' else wp-nginx-flavors-test }}"
+wp_nginx_flavors: "{{ wp_nginx_flavors_prod if inventory_deployment_stage == 'production' else wp_nginx_flavors_test }}"
