--- a/ansible/roles/wordpress-builds/tasks/secrets.yml
+++ b/ansible/roles/wordpress-builds/tasks/secrets.yml
@@ -1,7 +1,12 @@
 - tags: always
-  include_vars: "{{ item }}"
-  with_items:
-    - build-secrets.yml
+  include_vars:
+    file: build-secrets.yml
+    name: build_secrets
+
+- tags: always
+  include_vars:
+    file: github-credentials.yml
+    name: github_credentials
 
 - name: wp-base/Secret - Push Secret
   kubernetes.core.k8s:
@@ -20,3 +25,17 @@
       auths:
         "quay-its.epfl.ch":
           "auth": "{{ _quay_basic_auth | b64encode }}"
+
+- name: GitHub App secrets
+  kubernetes.core.k8s:
+    state: present
+    definition:
+      apiVersion: v1
+      kind: Secret
+      metadata:
+        name: wp-ci-github-app-secrets
+        namespace: "{{ inventory_namespace }}"
+      type: Opaque
+      stringData:
+        APP_ID: "{{ github_credentials.id | string }}"
+        PRIVATE_KEY: "{{ github_credentials.private_key | eyaml(github_credentials.eyaml_keys) }}"
