[fix] Get secret from correct file

--- a/ansible/roles/wordpress-builds/tasks/secrets.yml
+++ b/ansible/roles/wordpress-builds/tasks/secrets.yml
@@ -20,7 +20,7 @@
       data:
         .dockerconfigjson: "{{ _tekton_push_secret_config | to_json | b64encode }}"
   vars:
-    _quay_basic_auth: "{{ quay_push_credentials.name }}:{{ quay_push_credentials.password | eyaml(eyaml_keys) }}"
+    _quay_basic_auth: "{{ build_secrets.quay_push_credentials.name }}:{{ build_secrets.quay_push_credentials.password | eyaml(build_secrets.eyaml_keys) }}"
     _tekton_push_secret_config:
       auths:
         "quay-its.epfl.ch":
