[feature] Automated nightly restauration of sites from prod to test

--- a/ansible/roles/wordpress-namespace/tasks/mariadb.yml
+++ b/ansible/roles/wordpress-namespace/tasks/mariadb.yml
@@ -128,3 +128,6 @@
               key: accessSecret
             tls:
               enabled: true
+
+- name: "Restore nightly sites from prod to test"
+  ansible.builtin.include_tasks: restore-sites-prod-to-test.yml
