--- a/ansible/roles/wordpress-builds/tasks/tekton.yml
+++ b/ansible/roles/wordpress-builds/tasks/tekton.yml
@@ -31,6 +31,7 @@
             default: []
             description: "List af all repositories to clone on a branch"
           - name: branch_name
+            default: ''
             description: "Branch name to use in the clone command"
         workspaces:
           - name: shared-workspace
